test/lattests/extensions/objects1/bad/redefinedMethodFromBase.lat
class a {
    int foo(int x) { return 0; }
    int bar(int y) { return 0; }
}

class b extends a {
    int bar(boolean y) { return 1; }
    int baz(int z) { return 2; }
}